support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_deprecated.i
%module xxx

int foo(%val int *x, %out int *y);





